# mnemosys-code

./: .gitignore  CLAUDE.md  CLAUDE_MNEMO.md  LICENSE  MNEMO_GUIDE.md  README.md  mnemo.py  mnemo_anchor.py  mnemo_arc.py  mnemo_associate.py  mnemo_chains.py  mnemo_cli.py  mnemo_coverage.py  mnemo_explore.py  mnemo_extract.py  mnemo_fs.py  mnemo_graph.py  mnemo_grep.py  mnemo_handoff.py  mnemo_hook.py  mnemo_infer.py  mnemo_log.py  mnemo_map.py  mnemo_mcp.py  mnemo_pipeline.py  mnemo_plan.py  mnemo_read.py  mnemo_retrieval.py  mnemo_scan.py  mnemo_session.py  mnemo_sidecar.py  mnemo_verify.py  mnemo_web.py  pyproject.toml
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
docs/: architecture.md
scripts/: mnemo_setup.ps1  mnemo_setup.sh
