[project]
name = "monet-code"
version = "0.1.0"
description = "Content-addressed project memory for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "anthropic",
]

[project.scripts]
mnemo = "mnemo_cli:main"

[project.optional-dependencies]
web = ["fastapi", "uvicorn"]
sidecar = ["rich"]
embedding = ["openai"]
all = ["fastapi", "uvicorn", "rich", "openai"]

[project.urls]
Repository = "https://github.com/acastango/monet-code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "mnemo*.py",
    "CLAUDE_MNEMO.md",
    "MNEMO_GUIDE.md",
]
